# waitmanager-web

./: README.md  pyproject.toml
waitmanager/: core.py  django.py  fastapi.py  flask.py
